fix: button mobile style

--- a/style.css
+++ b/style.css
@@ -76,13 +76,15 @@ body {
 }
 
 .btn {
+    width: fit-content;
+    height: fit-content;
     border-radius: 10px;
     border: 1px solid gray;
     font-weight: 700;
     background-color: transparent;
     color: white;
     font-size: 1.2rem;
-    padding: 5px 10px;
+    padding: 0.3rem 1.2rem;
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
     transition-duration: 300ms;
     transition-timing-function: ease-in-out;
@@ -145,6 +147,7 @@ body {
     row-gap: 1rem;
     font-size: 1.5rem;
     font-weight: 700;
+    justify-items: center;
 }
 
 .form-dialog-close {
